# phorapter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
api/: openapi.yaml
docs/: adapters.md  api.md  architecture.md  concepts.md  decisions.md  engine.md  evaluation.md  mcp.md  operations.md  quickstart-library.md  quickstart-server.md
scripts/: check_shipped_content.py
src/phorapter/: __init__.py  __main__.py  config.py  errors.py  forest.py  fusion.py  grid.py  ids.py  markers.py  model.py  selection.py  slicer.py  tokens.py  trace.py
src/phorapter/embed/: __init__.py  ollama.py  openai_compat.py
src/phorapter/eval/: __init__.py  harness.py
src/phorapter/server/: __init__.py  rest.py
src/phorapter/service/: __init__.py
src/phorapter/stores/: __init__.py  memory.py  qdrant.py
src/phoropter/: __init__.py  __main__.py  config.py  errors.py  forest.py  fusion.py  grid.py  ids.py  markers.py  model.py  selection.py  slicer.py  tokens.py  trace.py
src/phoropter/embed/: __init__.py  ollama.py  openai_compat.py
src/phoropter/eval/: __init__.py  harness.py
src/phoropter/server/: mappers.py  mcp.py  middleware.py  rest.py  schemas.py
src/phoropter/service/: core.py  corpora.py  documents.py  query.py
src/phoropter/stores/: __init__.py  memory.py  qdrant.py
tests/: test_embedders.py  test_eval.py  test_forest.py  test_fusion.py  test_grid.py  test_ids.py  test_markers.py  test_openapi_contract.py  test_package.py  test_parity.py  test_payload_codec.py  test_prefix_property.py  test_selection.py  test_server_unit.py  test_slicer.py  test_worked_example.py
tests/integration/: test_server.py
tests/spi/: test_store_contract.py
