[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "phorapter"
version = "0.1.0.dev0"
description = "Multi-view RAG server: multi-size origin-aligned slicing, exact containment detection, and token-budgeted context right-sizing."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Impluvium Software" }]
keywords = ["rag", "retrieval", "chunking", "context", "token-budget", "vector-search", "mcp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing :: Indexing",
]
# Core stays lean: tiktoken is the sole runtime dependency and is imported lazily,
# so `import phorapter` works in a stripped environment.
dependencies = ["tiktoken>=0.8"]

[project.optional-dependencies]
qdrant = ["qdrant-client>=1.12"]
server = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "fastmcp>=2.3",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "httpx>=0.27",
  "structlog>=24.4",
]
eval = ["httpx>=0.27"]
all = ["phorapter[qdrant,server,eval]"]

[project.urls]
Homepage = "https://github.com/impluvium-software/phorapter"
Documentation = "https://github.com/impluvium-software/phorapter/tree/main/docs"
Changelog = "https://github.com/impluvium-software/phorapter/blob/main/CHANGELOG.md"

[project.scripts]
phorapter = "phorapter.__main__:main"

# Community adapters register themselves under the same groups; see docs/adapters.md.
[project.entry-points."phorapter.stores"]
memory = "phorapter.stores.memory:InMemoryStore"
qdrant = "phorapter.stores.qdrant:QdrantStore"

[project.entry-points."phorapter.embedders"]
ollama = "phorapter.embed.ollama:OllamaEmbedder"
openai_compat = "phorapter.embed.openai_compat:OpenAICompatEmbedder"

# Dev tools carry upper bounds so a new tool release cannot turn CI red without a
# deliberate bump. ruff is pinned to a minor (it is pre-1.0; its lint rules and
# formatter change between minors); the rest are capped below the next major.
# Floors track the versions CI and local development are verified against, so a
# plain `pip install --group dev` resolves both to the same tools.
[dependency-groups]
dev = [
  "pytest>=8.3,<10",
  "pytest-asyncio>=1.0,<2",
  "hypothesis>=6.115,<7",
  "ruff>=0.15,<0.16",
  "mypy>=2.2,<3",
  "import-linter>=2.1,<3",
  "pre-commit>=4.0,<5",
  "datamodel-code-generator>=0.26,<1",
  "schemathesis>=4.0,<5",
  "hatch>=1.13,<2",
  "testcontainers>=4.8,<5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/phorapter"]

[tool.hatch.envs.default.scripts]
# Regenerate the REST DTOs from the authored OpenAPI contract (never hand-edit schemas.py).
codegen = "datamodel-codegen --input api/openapi.yaml --input-file-type openapi --output src/phorapter/server/schemas.py --output-model-type pydantic_v2.BaseModel --target-python-version 3.11 --use-schema-description --use-annotated"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4", "RUF"]
ignore = [
  "E501", # line length is handled by the formatter
]

[tool.ruff.lint.per-file-ignores]
"src/phorapter/server/schemas.py" = ["ALL"] # generated file

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
show_error_codes = true
files = ["src/phorapter"]

[[tool.mypy.overrides]]
module = "phorapter.server.schemas"
ignore_errors = true # generated file

# Third-party libraries pulled in transitively (via qdrant-client) that ship no
# usable stubs for our target version, or whose stubs use newer-Python syntax.
[[tool.mypy.overrides]]
module = ["qdrant_client", "qdrant_client.*", "numpy", "numpy.*", "grpc", "grpc.*"]
follow_imports = "skip"
follow_imports_for_stubs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not integration' --strict-markers"
markers = [
  "gate: correctness gates (prefix property, cross-language parity) — run first; nothing merges if these fail",
  "integration: requires external services (Qdrant container); excluded by default",
]
asyncio_mode = "auto"

[tool.importlinter]
root_package = "phorapter"
include_external_packages = true

# The core must stay importable and runnable in a stripped environment:
# stdlib only, plus a lazy tiktoken import inside phorapter.tokens.
[[tool.importlinter.contracts]]
name = "core does not import the server stack"
type = "forbidden"
source_modules = [
  "phorapter.errors",
  "phorapter.grid",
  "phorapter.model",
  "phorapter.markers",
  "phorapter.ids",
  "phorapter.slicer",
  "phorapter.forest",
  "phorapter.fusion",
  "phorapter.selection",
  "phorapter.trace",
  "phorapter.tokens",
  "phorapter.stores.memory",
]
forbidden_modules = [
  "phorapter.server",
  "phorapter.service",
  "phorapter.config",
  "phorapter.embed",
  "phorapter.stores.qdrant",
]

[[tool.importlinter.contracts]]
name = "core does not import third-party frameworks"
type = "forbidden"
source_modules = [
  "phorapter.errors",
  "phorapter.grid",
  "phorapter.model",
  "phorapter.markers",
  "phorapter.ids",
  "phorapter.slicer",
  "phorapter.forest",
  "phorapter.fusion",
  "phorapter.selection",
  "phorapter.trace",
  "phorapter.tokens",
  "phorapter.stores.memory",
]
# The single sanctioned exception: tokens.py imports tiktoken lazily inside
# functions. A stripped-env test asserts the laziness; everything else here
# stays forbidden.
ignore_imports = ["phorapter.tokens -> tiktoken"]
forbidden_modules = [
  "fastapi",
  "pydantic",
  "pydantic_settings",
  "httpx",
  "qdrant_client",
  "structlog",
  "uvicorn",
  "fastmcp",
  "tiktoken",
]
